--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion "24.0.0 rc2"
     defaultConfig{
-        applicationId "cn.ucai.superwechat"
+        applicationId "cn.ucai.fulicenter"
     }
 
 
